# pico-nutator

./: .gitignore  CMakeLists.txt  README.md
nutator/: nutator.kicad_pcb  nutator.kicad_prl  nutator.kicad_pro  nutator.kicad_sch
src/: button.c  button.h  main.c  memmap.ld  nhd-k3z.c  nhd-k3z.h  persist.c  persist.h  stepper-motor.c  stepper-motor.h
